--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <input type="text" id="search" placeholder="search...">
         <button id="searchBtn" onclick="fetchPokemon()">Search</button>
 
+        <!-- pokemon list -->
+        <ol id="pokedex"></ol>
     </div>
     <!-- JavaScript -->
     <script src="app.js"></script>
