--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Pokedex</h1>
 
         <input type="text" id="search" placeholder="search...">
-        <button id="searchBtn" onclick="fetchPokemon()">Search</button>
+        <button id="searchBtn">Search</button>
 
         <!-- pokemon list -->
         <ol id="pokedex"></ol>
